# mnist-rust

./: .gitignore  Cargo.toml  mnist.py  mnist_classifier.safetensors
src/: main.rs
