[package]
name = "mnist-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte = "0.2.6"
memmap2 = "0.7.1"
mnist = "0.5.0"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
order = "0.0.1"
rand = "0.8.5"
safe = "0.1.0"
safetensors = "0.3.1"
